@@ -1,4 +1,13 @@
-/* $Id: ChangeLog 613 2006-11-26 06:19:04Z knut.osmundsen@oracle.com $ */
+/* $Id: ChangeLog 644 2006-12-03 05:06:18Z knut.osmundsen@oracle.com $ */
+
+2006-12-02:
+    - kmk:
+        o Fixed bugs dealing with the order SDK properties was applied to sources.
+
+2006-12-01:
+    - kBuild:
+        o Added support for compiling resource files.
+        o Fixed bug causing object files take from the SOURCES to be cleaned up.
 
 2006-11-25:
     - kmk, kBuild:
